--- a/src/index.hbs
+++ b/src/index.hbs
@@ -50,6 +50,7 @@
         </div>
         <div class="tabs-tab page-signQR">
           <div class="container center-align">
+            <div class="logo-image"></div>
             <div class="auth-image"></div>
           </div>
         </div>
